feat: 模拟预览、发布

--- a/src/layouts/Header/index.less
+++ b/src/layouts/Header/index.less
@@ -10,4 +10,18 @@
   z-index: 22;
   color: #fff;
   background-color: #000;
+  .preview,
+  .release {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    .compIcon {
+      font-size: 16px;
+      color: white;
+      margin-right: 5px;
+    }
+  }
+  .release {
+    margin-left: 20px;
+  }
 }
