--- a/src/layouts/Content/Draggable/index.less
+++ b/src/layouts/Content/Draggable/index.less
@@ -1,7 +1,7 @@
 .main {
   position: absolute;
   text-align: initial !important; // 这是为了覆盖Draggable组件的textAlign属性
-  border: 1px solid #02dcf7;
+  // border: 1px solid #02dcf7;
   box-sizing: content-box;
 }
 .unselected {
