--- a/src/layouts/Editor/EditorComp/index.less
+++ b/src/layouts/Editor/EditorComp/index.less
@@ -1,4 +1,5 @@
 .editorComp {
+  height: 100%;
   .title {
     height: 60px;
     line-height: 60px;
@@ -8,5 +9,9 @@
     background-color: #1890ff;
     margin-bottom: 20px;
     color: #fff;
+  }
+  .formBox {
+    height: calc(100% - 60px);
+    overflow-y: auto;
   }
 }
