--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,35 @@
-.main {
-  height: 100%;
+.optBox {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  .corner {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background: #444;
+    box-sizing: border-box;
+    z-index: 21;
+  }
+  .ruler_horizontal {
+    height: 30px;
+    width: calc(100% - 30px);
+    position: absolute;
+    top: 0;
+    left: 30px;
+  }
+  .ruler_vertical {
+    height: calc(100% - 30px);
+    width: 30px;
+    position: absolute;
+    top: 30px;
+    left: 0;
+  }
+  .main {
+    width: calc(100% - 30px);
+    height: 100%;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+  }
 }
