--- a/src/layouts/Header/index.less
+++ b/src/layouts/Header/index.less
@@ -10,18 +10,18 @@
   z-index: 22;
   color: #fff;
   background-color: #000;
-  .preview,
-  .release {
+  .operation {
     cursor: pointer;
     display: flex;
     align-items: center;
+    margin-right: 20px;
     .compIcon {
       font-size: 16px;
       color: white;
       margin-right: 5px;
     }
-  }
-  .release {
-    margin-left: 20px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
