--- a/src/layouts/Comps/index.less
+++ b/src/layouts/Comps/index.less
@@ -24,6 +24,17 @@
     flex-direction: column;
     align-items: center;
     color: gray;
+    .componentTitle {
+      color: gray;
+      height: 40px;
+      width: 100%;
+      font-size: 18px;
+      font-weight: 500;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: 1px solid lightgray;
+    }
     .comp {
       background-color: #fff;
       padding: 6px;
