feat: 添加真机适配

--- a/src/pages/release/[pageId]/index.less
+++ b/src/pages/release/[pageId]/index.less
@@ -1,10 +1,10 @@
 .main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 320px 0 100px;
-  min-height: 100vh;
-  background-color: #f0f3f7;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // padding: 100px 320px 0 100px;
+  // min-height: 100vh;
+  // background-color: #f0f3f7;
   .canvas {
     position: relative;
     .comp {
