--- a/src/layouts/Content/index.less
+++ b/src/layouts/Content/index.less
@@ -7,10 +7,9 @@
   background-color: #f0f3f7;
   .canvas {
     position: relative;
-    border: 1px solid #ddd;
     box-shadow: 1px 1px 20px #ccc;
+    overflow-y: scroll;
     overflow-x: hidden;
-    overflow-y: auto;
     &::-webkit-scrollbar {
       display: none;
     }
