--- a/src/components/ListComponent/index.less
+++ b/src/components/ListComponent/index.less
@@ -1,8 +1,8 @@
 .main {
   position: absolute;
   display: flex;
+  flex-direction: column;
   .img {
-    width: 100%;
-    height: 100%;
+    height: 33.33%;
   }
 }
