--- a/src/pages/release/[pageId]/index.less
+++ b/src/pages/release/[pageId]/index.less
@@ -7,6 +7,8 @@
   // background-color: #f0f3f7;
   .canvas {
     position: relative;
+    overflow-x: hidden;
+    overflow-y: scroll;
     &::-webkit-scrollbar {
       display: none;
     }
