--- a/src/layouts/Comps/index.less
+++ b/src/layouts/Comps/index.less
@@ -1,23 +1,12 @@
 @primary-color: #1890ff;
 .main {
   position: absolute;
-  top: 0;
+  top: 60px;
   left: 0;
   width: 100px;
   height: 100%;
   background-color: #fff;
   font-size: 12px;
-  .compTop {
-    width: 100px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 20px;
-    font-style: italic;
-    background-color: #000;
-  }
   .compList {
     height: calc(100% - 60px);
     overflow-y: auto;
