--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,4 @@
+// 字体类型
 @font-face {
   font-family: 'MengQuGuoDong';
   src: url('https://cdn.weipaitang.com/static/public/20210914cb5c6dde-fb6b-6ddefb6b-5073-4301b3065ca1.ttf');
