feat: 添加字体类型

--- a/src/app.less
+++ b/src/app.less
@@ -46,3 +46,11 @@
   font-family: 'XiQueZhaoPai';
   src: url('https://cdn.weipaitang.com/static/public/20210914160ee2f7-b959-e2f7b959-6a2e-09db2fa9060b.ttf');
 }
+@font-face {
+  font-family: 'XiQueJuZhen';
+  src: url('https://cdn.weipaitang.com/static/public/20211026b2d63267-6313-32676313-ece7-60925e1c2321.ttf');
+}
+@font-face {
+  font-family: 'ZhenZhuNaiCha';
+  src: url('https://cdn.weipaitang.com/static/public/20211026a5d7cf63-da2b-cf63da2b-4292-f7fcdaac8f06.ttf');
+}
