feat: 修改布局、添加动画效果、修改滚动距离

--- a/src/layouts/Comps/index.less
+++ b/src/layouts/Comps/index.less
@@ -1,19 +1,19 @@
 @primary-color: #1890ff;
 .main {
   position: absolute;
-  top: 60px;
+  top: 0;
   left: 0;
   width: 100px;
   height: 100%;
   background-color: #fff;
   font-size: 12px;
   .compList {
-    height: calc(100% - 60px);
-    overflow-y: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: gray;
+    overflow-y: auto;
     .componentTitle {
       margin-top: 10px;
       color: gray;
