--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -32,4 +32,10 @@
     top: 30px;
     left: 30px;
   }
+  .containerBox {
+    width: 100%;
+    height: calc(100% - 90px);
+    position: absolute;
+    top: 60px;
+  }
 }
