--- a/src/layouts/Content/index.less
+++ b/src/layouts/Content/index.less
@@ -1,9 +1,11 @@
 .main {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 100px 320px 0 100px;
-  min-height: 100%;
+  // align-items: center;
+  padding: 30px 0 30px 100px;
+  width: calc(100% - 375px);
+  height: 100%;
+  overflow-y: auto;
   background-color: #f0f3f7;
   .canvas {
     position: relative;
